<resources>
    <string name="app_name">ChatApp</string>
    <string name="welcome_back">welcome back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">add image</string>
    <string name="name">Name</string>
    <string name="confirm">confirm</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
</resources>